--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-navigation",
+  "name": "react-native-navigation-ws",
   "version": "7.16.0",
   "description": "React Native Navigation - truly native navigation for iOS and Android",
   "license": "MIT",
